# onfido-python

./: .bumpversion.cfg  .gitignore  .release.json  CHANGELOG.MD  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python.yml
.openapi-generator/: FILES
onfido/: __init__.py  aio_resource.py  api_client.py  configuration.py  exceptions.py  mimetype.py  onfido.py  onfido_download.py  regions.py  resource.py  rest.py  utils.py  webhook_event_verifier.py
onfido/api/: __init__.py  default_api.py
onfido/models/: __init__.py  address.py  address_builder.py  address_shared.py  addresses_list.py  applicant.py  applicant_builder.py  applicant_consent.py  applicant_consent_builder.py  applicant_consent_name.py  applicant_create.py  applicant_request.py  applicant_response.py  applicant_shared.py  applicant_update.py  applicant_updater.py  applicants_list.py  biometric_token.py  check.py  (+318 more)
tests/: conftest.py  test_address_picker.py  test_advanced_electronic_signatures.py  test_applicants.py  test_autofill.py  test_biometric_tokens.py  test_checks.py  test_classic_webhook_event_verification.py  test_documents.py  test_errors.py  test_extraction.py  test_id_photos.py  test_live_photos.py  test_live_video.py  test_live_videos.py  test_mimetypes.py  test_motion_capture.py  test_motion_captures.py  test_other_regions.py  test_passkeys.py  test_qualified_electronic_signatures.py  test_regions.py  test_report_schemas.py  test_reports.py  test_resource.py  test_sdk_token.py  test_signing_documents.py  test_studio_webhook_event_verification.py  test_tasks.py  test_watchlist_monitor.py  test_watchlist_monitors.py  test_webhook_verification.py  test_webhooks.py  test_workflow_run_outputs.py  test_workflow_runs.py
(+30 files in other folders)
