[tool.poetry]
name = "onfido-python"
version = "1.2.0"
description = "The official wrapper for the Onfido API"
homepage = "https://github.com/onfido/onfido-python"
readme = "README.md"
license = "MIT"
authors = ["Ben Ahmady <ben.ahmady@onfido.com>"]
keywords = ["onfido", "identity"]
packages = [
    { include = "onfido" }
]

[tool.poetry.urls]
"Onfido API documentation" = "https://documentation.onfido.com"

[tool.poetry.dependencies]
python = ">=3.6,<4"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "yes"
requests_mock = "^1.8.0"
black = "^19.10b0"
pytest-black = "^0.3.9"
bump2version = "^1.0.0"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
