[tool.poetry]
name = "onfido-python"
version = "2.9.0"
description = "The official wrapper for the Onfido API"
homepage = "https://github.com/onfido/onfido-python"
readme = "README.md"
license = "MIT"
authors = ["Ben Ahmady <ben.ahmady@onfido.com>"]
keywords = ["onfido", "identity"]
packages = [{ include = "onfido" }]

[tool.poetry.urls]
"Onfido API documentation" = "https://documentation.onfido.com"

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.24.0"
importlib-metadata = { version = ">=0.12", markers = "python_version < \"3.8\"" }
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]
pytest = "*"
requests_mock = "^1.8.0"
black = "^19.10b0"
pytest-black = "^0.3.9"
bump2version = "^1.0.0"
flake8 = "^3.8.3"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.4"
pytest-asyncio = "^0.21.1"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
